crates/swc_ecma_parser/tests/flow/types/object/unexpected_static_002.js
// error: object types don't have static fields (including indexers)
type B = { static [K]: V }
